[tool.poetry]
name = "django_blog"
version = "0.1.0"
description = "simple blog app using django"
authors = ["Vrutik <vrutikprajapati2809@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
